[package]
name = "webcam"
version = "0.0.0"
edition = "2018"
description = "Asynchronous cross-platform webcam capture library."
license = "MIT OR APACHE-2.0 OR BSL-1.0"
documentation = "https://docs.rs/webcam"
homepage = "https://github.com/libcala/camera/blob/master/CHANGELOG.md"
repository = "https://github.com/libcala/webcam"

[dependencies]
pix = "0.13"
smelling_salts = "0.1"

[dev-dependencies]
pasts = "0.7"
